--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,7 +16,7 @@ header h1 {
 
 header nav ul {
     display: flex;
-    gap: 80px;
+    gap: 60px;
     list-style-type: none;
     padding: 0;
     margin: 10px 0 0 0; 
@@ -72,7 +72,63 @@ footer {
     width: 100%;
 }
 
+.container {
+    display: flex;
+    flex-wrap: column;
+    align-items: center;
+    margin-top: 40px;
+    margin-bottom: 20px;
+}
 
+.container h2 {
+    margin-bottom: 20px;
+    font-size: 25px;
+    color: darkslategray;
+    margin: auto;
+}
+
+form {
+    margin: auto;
+    padding: 25px 35px;
+    border-radius: 8px;
+    width: 500px;
+}
+
+label{
+    margin-top: 10px;
+    display: block;
+    font-size: 18px;
+    font-weight: 600;
+    color: darkslategray;
+}
+
+input, textarea {
+    width: 100%;
+    padding: 8px;
+    margin-top: 5px;
+    border: 1px solid black;
+    border-radius: 4px;
+    font-size: 16px;
+    box-sizing: border-box;
+}
+
+.checkbox {
+    margin-top: 15px;
+}
+
+button {
+    display: block;
+    width: 50%;
+    margin: 20px auto;
+    padding: 10px 15px;
+    background-color: lightgrey;
+    color: black;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+    
+}
 
 
 
