increase image size on home page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -39,7 +39,7 @@ nav ul a {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 400px;
+    height: 500px;
     margin-bottom: 50px;
 }
 
@@ -58,7 +58,7 @@ nav ul a {
 
 .center-image {
     width: 600px;
-    height: 350px;
+    height: 500px;
     border-radius: 15px;
     object-fit: cover;
 }
@@ -77,10 +77,13 @@ nav ul a {
     display: flex;
     gap: 20px;
     align-items: center;
+    text-decoration: none;
+    color: inherit;
+    cursor: pointer;
 }
 
 .row img {
-    width: 300px;
+    width: 200px;
     height: 200px;
     border: 1px solid black;
     border-radius: 5px;
