wrapped header h1 in anchor tag for all pages

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,6 +14,11 @@ header h1 {
     color: slategray
 }
 
+.main{
+    text-decoration: none;
+    cursor: pointer;
+}
+
 header nav ul {
     display: flex;
     gap: 60px;
